add under review

--- a/publications.html
+++ b/publications.html
@@ -119,6 +119,15 @@
 
 					<!-- <h3 id="working-papers-pre-prints-and-others"><a name="workingpapers"></a>Working Papers, Pre-Prints and Others</h3> -->
 						<p> &nbsp; </p>
+						<h3 id="under-review"><a name="new_papers"></a>Under Review</h3>
+						<p> <span  class="fa fa-book" style="color:#00695F";></span>
+							<strong>Ternes, P.</strong>, J. Ward, A. Heppenstall, V. Kumar, L.‐M. Kieu, and N. Malleson(2021).
+
+							
+						<a href="https://open-research-europe.ec.europa.eu/">Data Assimilation and Agent‐Based Modelling: Towards the Incorporation of Categorical Agent Parameters</a>
+						<em>Open Research Europe</em></p>
+					
+						<p> &nbsp; </p>
 						<h3 id="phd-thesis"><a name="thesis"></a>PhD Thesis</h3>
 							<p> <span  class="fa fa-book" style="color:#00695F";></span>
 								<strong>Ternes, P.</strong> (2018). 
