add VII water workshop

--- a/presentations.html
+++ b/presentations.html
@@ -66,7 +66,17 @@
 							<a href="Documents/Presentations/2021-05-26-RADDISH_workshop.html">Applications to real pedestrian traces and gate selection problems with Particle Filters</a>.  Keynote presentation by <a href="https://patricia-ternes.github.io/">Patricia Ternes</a> and <a href="https://www.nickmalleson.co.uk/">Nick Malleson</a> at the <a href="#">Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop</a>, 26th May 2021.
 							</p>
 
-
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+								<a href="#">
+									Slip boundary conditions and the behaviour of nanoconfined water</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+									and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
+								at the <a href="http://www.if.ufrgs.br/~barbosa/Complex-Workshop/2017/complex-workshop-2017-2.html">
+									VIII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
+									11 and 12, December 2017.
+								</p>
+								
                         <div class="2u">
                             <ul class="style">
                                 <li>
