--- a/presentations.html
+++ b/presentations.html
@@ -76,7 +76,18 @@
 									VIII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
 									11 and 12, December 2017.
 								</p>
-								
+
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+								<a href="#">
+									Single‐file mobility of waterlike fluid in a generalized Frenkel‐Kontorova model</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
+								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2017-1.html">
+									Complex Systems Seminars</a>, 
+									3rd May 2017.
+								</p>
+																
                         <div class="2u">
                             <ul class="style">
                                 <li>
