add VII water workshop

--- a/presentations.html
+++ b/presentations.html
@@ -87,7 +87,18 @@
 									Complex Systems Seminars</a>, 
 									3rd May 2017.
 								</p>
-																
+
+								<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+									<a href="#">
+										Flow of a nanoconfined water‐like liquid</a>.  
+									Keynote presentation by 
+										<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+										and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
+									at the <a href="https://www.if.ufrgs.br/~barbosa/Complex-Workshop/2016/complex-workshop-2016-2.html">
+										VII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
+										25 and 26, November 2016.
+									</p>
+								
                         <div class="2u">
                             <ul class="style">
                                 <li>
