add presentation complex system 2015

--- a/presentations.html
+++ b/presentations.html
@@ -98,7 +98,18 @@
 										VII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
 										25 and 26, November 2016.
 									</p>
-								
+
+									<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+										<a href="#">
+											Friction in an effective water‐wall system</a>.  
+										Keynote presentation by 
+											<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+											and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
+										at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2015-2.html">
+											Complex Systems Seminars</a>, 
+											10th December 2015.
+										</p>
+
                         <div class="2u">
                             <ul class="style">
                                 <li>
