add VI workshop

--- a/presentations.html
+++ b/presentations.html
@@ -110,6 +110,17 @@
 											10th December 2015.
 										</p>
 
+										<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+											<a href="#">
+												Slip mechanism for a water‐like liquid</a>.  
+											Keynote presentation by 
+												<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+												and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
+											at the <a href="https://www.if.ufrgs.br/~barbosa/Complex-Workshop/2015/complex-workshop-2015-2.html">
+												VI Workshop in Complexity of Water and Other Liquids</a>, 
+												20 and 21, November 2015.
+											</p>
+
                         <div class="2u">
                             <ul class="style">
                                 <li>
