--- a/presentations.html
+++ b/presentations.html
@@ -145,6 +145,17 @@
 									15th July 2015.
 							</p>							
 
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+								<a href="#">
+									Mobility analysis of a water‐like fluid confined in carbon nanotubes</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
+								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2014-2.html">
+									Complex Systems Seminars</a>, 
+									10th September 2014.
+							</p>			
+
                         <div class="2u">
                             <ul class="style">
                                 <li>
