add poster section

--- a/presentations.html
+++ b/presentations.html
@@ -110,7 +110,18 @@
 									14 and 15, November 2014.
 							</p>
 
-						
+						<h3 id="conference-poster"><a name="poster"></a>Conference Poster Session</h3>
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+								<a href="#">
+									Single-file mobility of water-like fluid</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
+								at the <a href="https://www.grc.org/chemistry-and-physics-of-liquids-grs-conference/2017/">
+									Chemistry and Physics of Liquids - Gordon Research Seminar (GRS)</a>, 
+									August 5-6, 2017. Holderness, NH, US
+							</p>
+
 						<h3 id="campus-talks"><a name="talks"></a>Campus and Invited Talks</h3>
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
 								<a href="#">
@@ -156,22 +167,7 @@
 									10th September 2014.
 							</p>			
 
-                        <div class="2u">
-                            <ul class="style">
-                                <li>
-                                    <img src="/images/construction.jpg" 
-                                         style="width:100%; border-radius:10px;"/>
-                                </li>
-                            </ul>
-                        </div>
-			
-                        <div class="10u">
-                            <ul class="style">
-                                <li>
-                                    <h1><a>This page is under construction</a></h1>
-                                </li>
-                            </ul>
-                        </div>
+                        
                     </div>
                 </section>
             </div>
@@ -188,38 +184,3 @@
             </div>		                    
 	</body>
 </html>
-
-							<!-- 
-	                        <ul style="PADDING-LEFT: 50px">
-	                        	<li>Slip boundary conditions and the behaviour of nanoconfined water.
-	                        		VIII Workshop in Complexity of Water, Other Liquids and Science Education.
-		                        	UFSC, Brazil. November 2017. 
-		                        </li><hr class="dashed">
-	                        	<li>Single-file mobility of waterlike fluid in a generalized Frenkel-Kontorova model.
-		                        	Complex Systems Seminars.
-		                        	UFRGS, Brazil, May 2017.
-								</li><hr class="dashed">
-	                        	<li>Flow of a nanoconfined water-like liquid.
-									VII Workshop in Complexity of Water, Other Liquids and Science Education.
-									UFSC, Brazil. November 2016.
-								</li><hr class="dashed">
-								<li>Friction in an effective water-wall system.
-	                       			Complex Systems Seminars.
-	                       			UFRGS, Brazil, December 2015.
-	                        	</li><hr class="dashed">									
-								<li>Slip mechanism for a water-like liquid.
-	                        		VI Workshop in Complexity of Water and Other Liquids.Slip mechanism for a water-like liquid.
-	                        		UFSC, Brazil. November 2015.
-	                        	</li><hr class="dashed">
-	                       		<li>Mobility of a water-like fluid in a generalized Frenkel-Kontorova model.
-	                       			Complex Systems Seminars.
-	                       			UFRGS, Brazil, July 2015.
-	                        	</li><hr class="dashed">
-	                        	<li>Mobility of waterlike fluid with a confining potential.
-		                        	V Workshop of Water and Other Complex Liquids. 
-		                        	UFSC, Brazil. November 2014.
-		                        </li><hr class="dashed">
-		                        <li>Mobility analysis of a water-like fluid confined in carbon nanotubes.
-		                        	Complex Systems Seminars.
-		                        	UFRGS, Brazil, September 2014.
-		                    </ul>-->
