add poster women in physics

--- a/presentations.html
+++ b/presentations.html
@@ -121,6 +121,16 @@
 									Chemistry and Physics of Liquids - Gordon Research Seminar (GRS)</a>, 
 									August 5-6, 2017. Holderness, NH, US
 							</p>
+							
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+								<a href="#">
+									Single-file mobility of water-like fluid in SWNT</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+								at the <a href="https://www2.ifsc.usp.br/portal-ifsc/ii-conferencia-brasileira-qmulheres-na-fisicaq/">
+									Brazilian Conference of Women in Physics</a>, 
+									November 27-29, 2015. Rio de Janeiro, Brazil.
+							</p>
 
 						<h3 id="campus-talks"><a name="talks"></a>Campus and Invited Talks</h3>
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
