--- a/presentations.html
+++ b/presentations.html
@@ -63,7 +63,14 @@
 						<h3 id="conferece-presentations"><a name="conferences"></a>Conference Presentations</h3>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
-							<a href="Documents/Presentations/2021-05-26-RADDISH_workshop.html">Applications to real pedestrian traces and gate selection problems with Particle Filters</a>.  Keynote presentation by <a href="https://patricia-ternes.github.io/">Patricia Ternes</a> and <a href="https://www.nickmalleson.co.uk/">Nick Malleson</a> at the <a href="#">Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop</a>, 26th May 2021.
+								<a href="Documents/Presentations/2021-05-26-RADDISH_workshop.html">
+									Applications to real pedestrian traces and gate selection problems with Particle Filters</a>.  
+								Keynote presentation by 
+									<a href="https://patricia-ternes.github.io/">Patricia Ternes</a> 
+									and <a href="https://www.nickmalleson.co.uk/">Nick Malleson</a> 
+								at the <a href="#">
+									Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop</a>, 
+									26th May 2021. UK
 							</p>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -74,7 +81,7 @@
 									and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
 								at the <a href="http://www.if.ufrgs.br/~barbosa/Complex-Workshop/2017/complex-workshop-2017-2.html">
 									VIII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
-									11 and 12, December 2017.
+									11 and 12, December 2017. Brazil.
 							</p>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -85,7 +92,7 @@
 									and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Complex-Workshop/2016/complex-workshop-2016-2.html">
 									VII Workshop in Complexity of Water, Other Liquids and Science Education</a>, 
-									25 and 26, November 2016.
+									25 and 26, November 2016. Brazil.
 							</p>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -96,7 +103,7 @@
 									and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Complex-Workshop/2015/complex-workshop-2015-2.html">
 									VI Workshop in Complexity of Water and Other Liquids</a>, 
-									20 and 21, November 2015.
+									20 and 21, November 2015. Brazil.
 							</p>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -107,7 +114,7 @@
 									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Complex-Workshop/2014/complex-workshop-2014-2.html">
 									V Workshop in Complexity of Water and Other Liquids</a>, 
-									14 and 15, November 2014.
+									14 and 15, November 2014. Brazil.
 							</p>
 
 						<h3 id="conference-poster"><a name="poster"></a>Conference Poster Session</h3>
@@ -141,7 +148,7 @@
 									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2017-1.html">
 									Complex Systems Seminars</a>, 
-									3rd May 2017.
+									3rd May 2017. Brazil.
 							</p>
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -152,7 +159,7 @@
 									and <a href="https://www.if.ufrgs.br/~barbosa/">Marcia Barbosa</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2015-2.html">
 									Complex Systems Seminars</a>, 
-									10th December 2015.
+									10th December 2015. Brazil.
 							</p>
 						
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -163,7 +170,7 @@
 									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2015-1.html">
 									Complex Systems Seminars</a>, 
-									15th July 2015.
+									15th July 2015. Brazil.
 							</p>							
 
 							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
@@ -174,7 +181,7 @@
 									and <a href="http://pbx-brasil.com/">Evy Salcedo Torres</a> 
 								at the <a href="https://www.if.ufrgs.br/~barbosa/Seminar/complex-2014-2.html">
 									Complex Systems Seminars</a>, 
-									10th September 2014.
+									10th September 2014. Brazil.
 							</p>			
 
                         
