--- a/presentations.html
+++ b/presentations.html
@@ -21,6 +21,20 @@
 			<link rel="stylesheet" href="/css/style.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+        <script src="https://kit.fontawesome.com/bf476d6df0.js" crossorigin="anonymous"></script>
+
+        <style type="text/css">
+            /* Dashed border */
+            hr.dashed {border-top: 1px dashed #bbb;}
+
+            div.taRight {text-align: right;}
+
+            #return-to-top {position: fixed; bottom: 20px; right: 20px; background: rgb(0, 0, 0); background: #b6d0cd; width: 50px; height: 50px; display: block; text-decoration: none; -webkit-border-radius: 35px; -moz-border-radius: 35px; border-radius: 35px; display: none; -webkit-transition: all 0.3s linear; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease;}
+            #return-to-top i {color: #fff; margin: 0; position: relative; left: 10px; top: 13px; font-size: 30px; -webkit-transition: all 0.3s ease; -moz-transition: all 0.3s ease; -ms-transition: all 0.3s ease; -o-transition: all 0.3s ease; transition: all 0.3s ease;}
+            #return-to-top:hover {background: #00695F}
+            #return-to-top:hover i {color: #fff;top: 5px;}
+
+        </style>		
 	</head>
 	<body class="homepage">
 
