--- a/presentations.html
+++ b/presentations.html
@@ -106,6 +106,17 @@
                                     <li>&nbsp;</li>
                                 </ul>
                             </div>
+
+							<div class="4u">
+                                <ul class="style">
+                                    <li>
+                                        <a href="#interviews"><span class="fa fa-newspaper"></span></a>
+                                        <h3><a href="#interviews">Interviews</a></h3>
+                                    </li>
+                                    <li>&nbsp;</li>
+                                </ul>
+                            </div>
+
                         </div>
                     </section>
 
@@ -238,19 +249,20 @@
 									10th September 2014. Brazil.
 							</p>			
 
-						<h3 id="interviews"><a name="interview"></a>Interviews</h3>
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+						<h3 id="interviews"><a name="interview"></a> Interviews </h3>
+						<div>
+							<p><span  class="fa fa-desktop" style="color:#00695F";></span>
 								<a href="https://www.cdrc.ac.uk/inside-the-turing-lida-data-study-group/">
 									Inside the Turing-LIDA Data Study Group</a>
 								at the Consumer Data Research Centre, 4th August 2021, UK.
 							</p>
 
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p><span  class="fa fa-desktop" style="color:#00695F";></span>
 								<a href="https://oglobo.globo.com/economia/emprego/fuga-de-cerebros-pandemia-acelera-saida-de-profissionais-qualificados-para-trabalhar-no-exterior-24831508">
 									Brain drain: pandemic accelerates the departure of qualified professionals to work abroad</a>
 								at the O Globo, 10th January 2021, Brazil.
 							</p>
-							
+						</div>	
                     </div>
                 </section>
             </div>
