--- a/presentations.html
+++ b/presentations.html
@@ -80,7 +80,7 @@
                              <div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#conferece-presentations"><span class="fa fa-users-class"></span></a>
+                                        <a href="#conferece-presentations"><span class="fa fa-desktop"></span></a>
                                         <h3><a href="#conferece-presentations">Conference Presentations</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -90,7 +90,7 @@
                             <div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#conference-poster"><span class="fa fa-desktop"></span></a>
+                                        <a href="#conference-poster"><span class="fa fa-image"></span></a>
                                         <h3><a href="#conference-poster">Conference Poster Sessions</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -100,7 +100,7 @@
                             <div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#campus-talks"><span class="fa fa-desktop"></span></a>
+                                        <a href="#campus-talks"><span class="fa fa-microphone"></span></a>
                                         <h3><a href="#campus-talks">Campus and Invited Talks</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -186,7 +186,7 @@
 						<!-- Conference Poster Session -->
 						<h3 id="conference-poster"><a name="poster"></a>Conference Poster Session</h3>
 						<div style="PADDING-LEFT: 100px";>
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-image" style="color:#00695F";></span>
 								<a href="#">
 									Single-file mobility of water-like fluid</a>.  
 								Keynote presentation by 
@@ -197,7 +197,7 @@
 									August 5-6, 2017. Holderness, NH, US
 							</p>
 							
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-image" style="color:#00695F";></span>
 								<a href="#">
 									Single-file mobility of water-like fluid in SWNT</a>.  
 								Keynote presentation by 
@@ -211,7 +211,7 @@
 						<!-- Campus and Invited Talks -->
 						<h3 id="campus-talks"><a name="talks"></a>Campus and Invited Talks</h3>
 						<div style="PADDING-LEFT: 100px";>
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="#">
 									Single‐file mobility of waterlike fluid in a generalized Frenkel‐Kontorova model</a>.  
 								Keynote presentation by 
@@ -222,7 +222,7 @@
 									3rd May 2017. Brazil.
 							</p>
 
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="#">
 									Friction in an effective water‐wall system</a>.  
 								Keynote presentation by 
@@ -233,7 +233,7 @@
 									10th December 2015. Brazil.
 							</p>
 
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="#">
 									Mobility of a water‐like fluid in a generalized model</a>.  
 								Keynote presentation by 
@@ -244,7 +244,7 @@
 									15th July 2015. Brazil.
 							</p>							
 
-							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="#">
 									Mobility analysis of a water‐like fluid confined in carbon nanotubes</a>.  
 								Keynote presentation by 
@@ -255,17 +255,18 @@
 									10th September 2014. Brazil.
 							</p>			
 						</div>
+						&nbsp;
 
 						<!-- Interviews -->
 						<h3 id="interviews"><a name="interview"></a> Interviews </h3>
 						<div style="PADDING-LEFT: 100px";>
-							<p><span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
 								<a href="https://www.cdrc.ac.uk/inside-the-turing-lida-data-study-group/">
 									Inside the Turing-LIDA Data Study Group</a>
 								at the Consumer Data Research Centre, 4th August 2021, UK.
 							</p>
 
-							<p><span  class="fa fa-desktop" style="color:#00695F";></span>
+							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
 								<a href="https://oglobo.globo.com/economia/emprego/fuga-de-cerebros-pandemia-acelera-saida-de-profissionais-qualificados-para-trabalhar-no-exterior-24831508">
 									Brain drain: pandemic accelerates the departure of qualified professionals to work abroad</a>
 								at the O Globo, 10th January 2021, Brazil.
