--- a/presentations.html
+++ b/presentations.html
@@ -255,11 +255,24 @@
 									10th September 2014. Brazil.
 							</p>			
 						</div>
-						&nbsp;
+						
 
 						<!-- Interviews -->
 						<h3 id="interviews"><a name="interview"></a> Interviews </h3>
-						
+						&nbsp;
+						<div style="PADDING-LEFT: 100px";>
+							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
+								<a href="https://www.cdrc.ac.uk/inside-the-turing-lida-data-study-group/">
+									Inside the Turing-LIDA Data Study Group</a>
+								at the Consumer Data Research Centre, 4th August 2021, UK.
+							</p>
+
+							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
+								<a href="https://oglobo.globo.com/economia/emprego/fuga-de-cerebros-pandemia-acelera-saida-de-profissionais-qualificados-para-trabalhar-no-exterior-24831508">
+									Brain drain: pandemic accelerates the departure of qualified professionals to work abroad</a>
+								at the O Globo, 10th January 2021, Brazil.
+							</p>
+						</div>	
                     </div>
                 </section>
             </div>
