--- a/presentations.html
+++ b/presentations.html
@@ -37,7 +37,9 @@
         </style>		
 	</head>
 	<body class="homepage">
-
+        <!-- Return to the top button -->
+        <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-circle-up"></i></a>
+		
         <!-- Header -->
         <div id="header">
             <div class="container">
