--- a/presentations.html
+++ b/presentations.html
@@ -39,7 +39,7 @@
 	<body class="homepage">
         <!-- Return to the top button -->
         <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-circle-up"></i></a>
-		
+
         <!-- Header -->
         <div id="header">
             <div class="container">
@@ -102,7 +102,7 @@
                             <div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#campus-talks"><span class="fa fa-microphone"></span></a>
+                                        <a href="#campus-talks"><span class="fa fa-comment"></span></a>
                                         <h3><a href="#campus-talks">Campus and Invited Talks</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -112,7 +112,7 @@
 							<div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#interviews"><span class="fa fa-newspaper"></span></a>
+                                        <a href="#interviews"><span class="fa fa-microphone"></span></a>
                                         <h3><a href="#interviews">Interviews</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -213,7 +213,7 @@
 						<!-- Campus and Invited Talks -->
 						<h3 id="campus-talks"><a name="talks"></a>Campus and Invited Talks</h3>
 						<div style="PADDING-LEFT: 100px";>
-							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
+							<p> <span  class="fa fa-comment" style="color:#00695F";></span>
 								<a href="#">
 									Single‐file mobility of waterlike fluid in a generalized Frenkel‐Kontorova model</a>.  
 								Keynote presentation by 
@@ -224,7 +224,7 @@
 									3rd May 2017. Brazil.
 							</p>
 
-							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
+							<p> <span  class="fa fa-comment" style="color:#00695F";></span>
 								<a href="#">
 									Friction in an effective water‐wall system</a>.  
 								Keynote presentation by 
@@ -235,7 +235,7 @@
 									10th December 2015. Brazil.
 							</p>
 
-							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
+							<p> <span  class="fa fa-comment" style="color:#00695F";></span>
 								<a href="#">
 									Mobility of a water‐like fluid in a generalized model</a>.  
 								Keynote presentation by 
@@ -246,7 +246,7 @@
 									15th July 2015. Brazil.
 							</p>							
 
-							<p> <span  class="fa fa-microphone" style="color:#00695F";></span>
+							<p> <span  class="fa fa-comment" style="color:#00695F";></span>
 								<a href="#">
 									Mobility analysis of a water‐like fluid confined in carbon nanotubes</a>.  
 								Keynote presentation by 
@@ -262,14 +262,15 @@
 						<!-- Interviews -->
 						<h3 id="interviews"><a name="interview"></a> Interviews </h3>
 						&nbsp;
+
 						<div style="PADDING-LEFT: 100px";>
-							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
+							<p><span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="https://www.cdrc.ac.uk/inside-the-turing-lida-data-study-group/">
 									Inside the Turing-LIDA Data Study Group</a>
 								at the Consumer Data Research Centre, 4th August 2021, UK.
 							</p>
 
-							<p><span  class="fa fa-newspaper" style="color:#00695F";></span>
+							<p><span  class="fa fa-microphone" style="color:#00695F";></span>
 								<a href="https://oglobo.globo.com/economia/emprego/fuga-de-cerebros-pandemia-acelera-saida-de-profissionais-qualificados-para-trabalhar-no-exterior-24831508">
 									Brain drain: pandemic accelerates the departure of qualified professionals to work abroad</a>
 								at the O Globo, 10th January 2021, Brazil.
