--- a/teaching.html
+++ b/teaching.html
@@ -153,7 +153,8 @@
             <ul style="PADDING-LEFT: 50px">
             <li> <a href="https://github.com/patricia-ternes/LIDA-python-workshop">Workshop GitHub</a></li></ul>
 
-        
+        &nbsp;
+
         <h4 id="training-latex"> &ensp;&ensp;  A brief introduction to LaTeX</h4>
             <ul style="PADDING-LEFT: 50px">
             <li> Workshop content:</li> </ul>
