add dashed line

--- a/teaching.html
+++ b/teaching.html
@@ -155,6 +155,8 @@
 
         &nbsp;
 
+        <hr class="dashed">
+
         <h4 id="training-latex"> &ensp;&ensp;  A brief introduction to LaTeX</h4>
             <ul style="PADDING-LEFT: 50px">
             <li> Workshop content:</li> </ul>
