add latex presentation

--- a/teaching.html
+++ b/teaching.html
@@ -157,6 +157,22 @@
 
         <hr class="dashed">
 
+        <h4 id="training-python"> &ensp;&ensp;  LIDA - Intro to LaTeX Workshop</h4>
+            <ul style="PADDING-LEFT: 50px">
+            <li> <span class="fa fa-calendar-alt" style="color:#00695F";></span> Oct 2021</li>    
+            <li> Workshop content:</li> </ul>
+                    <li style="PADDING-LEFT: 80px"> LaTeX introduction </li>
+                    <li style="PADDING-LEFT: 80px"> Preamble and Packages </li>
+                    <li style="PADDING-LEFT: 80px"> Lists, Figures and Tables <a href="Documents/Teaching/Trainings/03-LIDA_LaTeX/presentation_intro_latex.html">Notes</a></li>
+                    <li style="PADDING-LEFT: 80px"> Maths</li>
+                    <li style="PADDING-LEFT: 80px"> BibTeX</li>
+            <ul style="PADDING-LEFT: 50px">
+            <li> <a href="https://github.com/patricia-ternes/LIDA-LaTeX-workshop">Workshop GitHub</a></li></ul>
+
+        &nbsp;
+
+        <hr class="dashed">
+
         <h4 id="training-latex"> &ensp;&ensp;  A brief introduction to LaTeX</h4>
             <ul style="PADDING-LEFT: 50px">
             <li> Workshop content:</li> </ul>
