add ml workshop notes

--- a/teaching.html
+++ b/teaching.html
@@ -146,7 +146,7 @@
             <ul style="PADDING-LEFT: 50px">
             <li> <span class="fa fa-calendar-alt" style="color:#00695F";></span> Oct 2021</li>    
             <li> Workshop content:</li> </ul>
-                    <li style="PADDING-LEFT: 80px"> Machine Learning overview </li>
+                    <li style="PADDING-LEFT: 80px"> Machine Learning overview <a href="Documents/Teaching/Trainings/02-LIDA_Python/presentation_ML.html">Notes</a></li>
                     <li style="PADDING-LEFT: 80px"> Working with geospatial data </li>
                     <li style="PADDING-LEFT: 80px"> Tips to speed up python codes <a href="Documents/Teaching/Trainings/02-LIDA_Python/presentation_speed-up.html">Notes</a></li>
                     <li style="PADDING-LEFT: 80px"> Getting data from APIs</li>
@@ -163,11 +163,12 @@
             <li> Workshop content:</li> </ul>
                     <li style="PADDING-LEFT: 80px"> LaTeX introduction </li>
                     <li style="PADDING-LEFT: 80px"> Preamble and Packages </li>
-                    <li style="PADDING-LEFT: 80px"> Lists, Figures and Tables <a href="Documents/Teaching/Trainings/03-LIDA_LaTeX/presentation_intro_latex.html">Notes</a></li>
+                    <li style="PADDING-LEFT: 80px"> Lists, Figures and Tables</li>
                     <li style="PADDING-LEFT: 80px"> Maths</li>
                     <li style="PADDING-LEFT: 80px"> BibTeX</li>
             <ul style="PADDING-LEFT: 50px">
-            <li> <a href="https://github.com/patricia-ternes/LIDA-LaTeX-workshop">Workshop GitHub</a></li></ul>
+            <li> <a href="https://github.com/patricia-ternes/LIDA-LaTeX-workshop">Workshop GitHub</a></li>
+            <li><a href="Documents/Teaching/Trainings/03-LIDA_LaTeX/presentation_intro_latex.html">Workshop Notes</a></li></ul>
 
         &nbsp;
 
