--- a/cv.html
+++ b/cv.html
@@ -88,8 +88,8 @@
 				                </li>
 				                <li style="font-size:1px";> &nbsp;</li>        	
 				                <li>
-				                    <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes"><span class="fas fa-university" style="font-size:50px";></span></a>
-				                    <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes"> University of Leeds Homepage </a>
+				                    <a href="https://arc.leeds.ac.uk/"><span class="fas fa-university" style="font-size:50px";></span></a>
+				                    <a href="https://arc.leeds.ac.uk/"> Research Computing Homepage </a>
 				                </li>
 				                <li style="font-size:1px";> &nbsp;</li>
 				                <li>
@@ -295,7 +295,8 @@
 
 							<h3 id="employment">Employment History</h3>
 							<ul style="PADDING-LEFT: 50px">
-								<li> Nov 2019 - Present. Researcher in Simulating Urban Systems, University of Leeds, UK.</li>
+								<li> Jan 2022 - Present. Research Software Engineer, University of Leeds, UK.</li>
+								<li> Nov 2019 - Jan 2022. Researcher in Simulating Urban Systems, University of Leeds, UK.</li>
 								<li> Mar 2018 - Oct 2019. Substitute Professor of Physics, Federal Institute Catarinense, Brazil.
 									<a href="/teaching.html#undergModules" style="font-size:12px">More information</a></li>
 								<li> Aug 2014 - June 2018. CNPq-funded doctoral student, Federal University of Rio Grande do Sul, Brazil.</li>
