--- a/index.html
+++ b/index.html
@@ -70,22 +70,23 @@
             <div class="9u">
                 <ul class="style">
                     <li>
-                        I am a Researcher in Simulating Urban Systems at the School of Geography, 
+                        I am a Research Software Engineer, focusing on Computational Mechanics, 
+                        at the <a href="https://arc.leeds.ac.uk/">Research Computing</a>, 
                         <a href="https://www.leeds.ac.uk/">University of Leeds</a>, UK. 
                         I have a PhD in Theoretical Physics, a Master degree  in Condensed Matter Physics
-                        and a <i>Licenciatura</i> degree in Physics. For contact details, please see my
-                        <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes">School of Geography</a> web page.
+                        and a <i>Licenciatura</i> degree in Physics. 
+                        For contact details, please see my <a href="/cv.html">CV</a> page.
                     </li>
                     <li>
                     	Most of my research focuses on the development of numerical simulation of complex
                     	systems in different areas, like simulations of fluid dynamics, nanoscopic friction,
                     	predator and prey relationship, and stock market. More recently, 
-                    	I have become interested on understand and explain social systems, like flows of
+                    	I also have become interested on understand and explain social systems, like flows of
                     	people around cities, in particular using agent-based modelling and data assimilation 
                     	techniques.
-						I am currently working <a href="https://dust.leeds.ac.uk/">DUST project</a>
+						<!-- I am currently working <a href="https://dust.leeds.ac.uk/">DUST project</a>
 						funded by the European Research Council</i>.
-						For more details, see my <a href="./research.html">current projects</a>.
+						For more details, see my <a href="./research.html">current projects</a>. -->
                     </li>                
                     <li>
                     	I also have extensive teaching experience. I worked as an undergraduate Substitute Professor 
